--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -954,8 +954,9 @@ server {
         rewrite ^/doc/longevity/tirzepatide/(?<file>.*)$ /doc/longevity/glp/tirzepatide/$file permanent;
         rewrite ^/(?<original>[L-Nl-n]*[h-q][r-t][s-v].[j-m][A-Ca-f][m-z]).*$ /$original permanent;
         rewrite ^/(?<original>.*).shtml$ /$original.html permanent;
-        rewrite ^/(?<original>.*)[:;,.]$ /$original permanent;
+        rewrite ^/(?<original>.*)[\:\;\,]$ /$original permanent;
         rewrite ^/static/font/drop-cap/(?<original>.*)$ /static/font/dropcap/$original permanent;
+        rewrite ^/metadata/annotation/(?<base>.*)/\%\2\f(?<original>.*)$ /metadata/annotation/$base/$2F$original permanent;
 
         rewrite ^/metadata/annotations/doc/(?<original>[0-9a-zA-Z].*) /metadata/annotation/%2Fdoc/$original permanent;
         rewrite ^/metadata/annotations/(?<original>[0-9a-ce-gi-z].*) /metadata/annotation/%2F$original permanent;
