--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -15160,8 +15160,119 @@
 "~^/Waterko$" "/water";
 "~^//rss.xml$" "https://gwern.substack.com/feed";
 "~^/cat-earwax.*$" "/earwax";
+"~/[Dd]rop-?caps.*$" "/dropcap";
+"~/[Dd]rop-cap$" "/dropcap";
+"~^/doc/cat/catnip/survey/%C3%B0$" "/doc/cat/catnip/survey/index";
+"~^/on-stress.page$" "/stress.page";
+"~^/newsletter/2021/06cosma.*$" "/newsletter/2021/06";
+"~^/.*Essays.*Gwern.*" "/index";
+"~^/doc/statistics/decision/2016-%C3%83%C2%B0$" "/doc/statistics/decision/2016-08-20-candyjapan-decisiontree-n9.csv";
+"~^/doc/sociolog.*/eva/2002-takeda-notenkimemoirs$" "/doc/anime/eva/2002-takeda-notenkimemoirs";
+"~^/doc/sociolog.*/eva/1996-newtype-anno-interview$" "/doc/anime/eva/1996-newtype-anno-interview";
+"~^/doc/ai/2019-09-22-danbooru2019/face.npz$" "/danbooru2021";
+"~^/doc/2003-mu$" "/doc/sociology/2003-murray-humanaccomplishment.pdf";
+"~^/2012-election-predictions.page$" "/2012-election.page";
+"~^/zeo/ZMA/zeo/CO2$" "/zeo/co2";
+"~^/SlowingMoore%EF%BF%BDsLaw.*$" "/slowing-moores-law";
+"~^/On-Hav-ing-Enough.*$" "/socks";
+"~^/Immoral-Books/.*$" "/immoral-books";
+"~^/holy-wars\?.*$" "/holy-war";
+"~^/hakyll.conf$" "/static/build/hakyll.hs";
+"~^/doc/technology/2018-07-mO.*$" "/doc/technology/2018-07-25-johnbackus-howdecentralizationevolves.html";
+"~^/doc/technology/2013-02-07-%C3.*$" "/doc/technology/2013-02-07-nyrb-rich-divingdeepintodanger.html";
+"~^/doc/statistics/causality/2001-1$" "/doc/statistics/causality/2001-ioannidis.pdf";
+"~^/doc/.*/Google-Alerts$" "/google-alerts";
+"~^/doc/.*/Death-Note-Ending$" "/death-note-ending";
+"~^/doc/rotten.*/[Cc]atnip$" "/catnip";
+"~^/doc/rotten.*/on-disrespect$" "/on-disrespect";
+"~^/doc/psychology/okcupid/raceandattraction20092014$" "/doc/psychology/okcupid/raceandattraction20092014.html";
+"~^/doc/psychology/2019-vanhiel.pdf%C2%A0$" "/doc/psychology/2019-vanhiel.pdf";
+"~^/doc/power.29$" "/doc/index";
+"~^/doc/philosophy/epistemology/AeZzd6CV$" "/doc/philosophy/epistemology/index";
+"~^/doc/math/2009-sinclair.pd%5Cf/doc/iq/2018-pl$" "/doc/math/2009-sinclair.pdf";
+"~^/doc/economics/advertising/img/ico.png$" "/static/img/favicon.ico";
+"~^/doc/economics/2010-melnikovaraich.pdf\)/$" "/doc/economics/2010-melnikovaraich.pdf";
+"~^/doc/darknet-market/2012-07-24-lonelykame2000l.mht$" "/doc/darknet-market/2012-07-24-lonelykamel.mht";
+"~^/doc/darknet-market/2011-06-21-pgpkeys.maff/$" "/doc/darknet-market/2011-06-21-pgpkeys.maff";
+"~^/doc/cs/algorithm/ai/nn/index$" "/doc/ai/nn/index";
+"~^/doc/cat/valerian/index$" "/doc/cat/psychology/drug/valerian/index";
+"~^/doc/cat/catnip/survey/2017-%C.*$" "/doc/cat/catnip/survey/index";
+"~^/doc/2008-na$" "/doc/bitcoin/2008-nakamoto";
+"~^/doc/2005-bongers-schokking\.pdf.*$" "/doc/iodine/2005-bongersschokking.pdf";
+"~^/dnm-arrests\?.*$" "/dnm-arrest";
+"~^/beauty/.*$" "/beauty";
+"~^/arias-past-present-and-future.page$" "/aria.page";
+"~^/ads\?trk=.*$" "/banner";
+"~^/adrafonil$" "/adrafinil";
+"~^/tla/.*$" "/tla";
+"~^/CropsF$" "/crops";
+"~^/doc/1992-berry\.pdf.*$" "/doc/algernon/1992-berry.pdf";
+"~^/doc/anime/eva/2011-h$" "/doc/anime/eva/2011-house";
+"~^/doc/biology/2000-iapac-norvir/tolerability/links.html$" "/doc/biology/2000-iapac-norvir/links.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/physref.html$" "/doc/biology/2000-iapac-norvir/physref.html";
+"~^/doc/cat/catnip/survey/index$" "/doc/cat/psychology/drug/catnip/survey/index";
+"~^/doc/darknet-market/agora/2014-0$" "/doc/darknet-market/agora/2014-12-17-agora-willyclock-complaint.pdf";
+"~^/doc/2017-hjorthoj\.pdf.*$" "/doc/economics/2017-hjorthoj.pdf";
+"~^/doc/economi$" "/doc/economics/index";
+"~^/doc/genetics/2016-genovese\.pdf.*$" "/doc/genetics/heritable/2016-genovese.pdf";
+"~^/doc/genetics/heritable/1986-stunkard.pd%5Cf$" "/doc/genetics/heritable/adoption/1986-stunkard.pdf";
+"~^/doc/genetics/2015-he\.pdf.*$" "/doc/genetics/heritable/correlation/2015-he.pdf";
+"~^/doc/genetics/2016-pasaniuc\.pdf.*$" "/doc/genetics/heritable/correlation/2016-pasaniuc.pdf";
+"~^/doc/genetics/2015-henn\.pdf.*$" "/doc/genetics/selection/natural/human/2015-henn.pdf";
+"~^/doc/genetics/2017-adhikari\.pdf.*$" "/doc/genetics/selection/natural/human/2017-adhikari.pdf";
+"~^/doc/genetics/2017-landry\.pdf.*$" "/doc/genetics/sequencing/2017-landry.pdf";
+"~^/doc/1980-engels\.pdf.*$" "/doc/history/1980-engels.pdf";
+"~^/doc/2013-feyrer\.pdf.*$" "/doc/iodine/2013-feyrer.pdf";
+"~^/doc/iq/1993-benbow-2\.pdf.*$" "/doc/iq/high/smpy/1993-benbow-2.pdf";
+"~^/doc/2004-lundberg\.pdf.*$" "/doc/nicotine/2004-lundberg.pdf";
+"~^/doc/psychology/okcupid/%C3%B0$" "/doc/psychology/okcupid/index";
+"~^/doc/algernon.*-a-person-is-no-longer-.*/2006-harris\.pdf.*$" "/doc/psychology/personality/psychopathy/2006-harris.pdf";
+"~^/doc/statistics/bayes/2009-1$" "/doc/statistics/bayes/2009-kaas.html";
+"~^/doc/statistics/bias/1968-rosenthalpygmalionintheclassroom\.pdf.*$" "/doc/statistics/bias/1968-rosenthal-pygmalionintheclassroom.pdf";
+"~^/doc/stafisfics/decision/1995-tengs\.pdf.*$" "/doc/statistics/decision/1995-tengs.pdf";
+"~^/doc/ai/poetry/2019-03-16-gpt2-poetry-prefix-jabberwocky-100samples.txt/index.html$" "/doc/ai/poetry/2019-03-16-gpt2-poetry-prefix-jabberwocky-100samples.txt";
+"~^/doc/cs/www/pellsson.github.io/49ed41ee2c27a13cb6ea04efedafb41b8247b579.html$" "/doc/www/pellsson.github.io/49ed41ee2c27a13cb6ea04efedafb41b8247b579.html";
+"~^/doc/cs/www/www.fast.ai/9a28ff1ac5c470a3c6ef9a5a16a95811196bf633.html$" "/doc/www/www.fast.ai/9a28ff1ac5c470a3c6ef9a5a16a95811196bf633.html";
+"~^/doc/bayes$" "/doc/statistics/bayes/index";
+"~^/fiction/Cloud-Nine.html$" "/fiction/cloud-nine";
+"~^/Forking-p$" "/forking-path";
+"~^/gpt-2/.*" "/gpt-2";
+"~^/Gpt2$" "/gpt23";
+"~^/Indox$" "/index";
+"~^/WiFi.shtml$" "/wifi";
+"~^/LongevityHere$" "/longevity";
+"~^/L*D-microdosing$" "/lsd-microdosing";
+"~^/mouse-Utopia$" "/mouse-utopia";
+"~^/newsletter/2029$" "/newsletter/2019/index";
+"~^/Oxiracetam$" "/nootropics#oxiracetam";
+"~^/nootropic/Timing$" "/timing";
+"~^/note/Attentions$" "/note/attention";
+"~^/Rubrication$" "/red";
+"~^/sync.sh$" "/static/build/sync-gwern.net.sh";
+"~^/doc/melatonin/favicon.ico$" "/static/img/favicon.ico";
+"~^/details/images/favicon.ico$" "/static/img/favicon.ico";
+"~^/Subscript$" "/subscripts";
+"~^/patreon$" "https://www.patreon.com/gwern";
+"~^/turing$" "/turing-complete";
+"~^/Waterko$" "/water";
+"~^/doc/r.*/Wikipedia-and-Other-Wikis$" "/wikipedia-and-other-wikis";
+"~^/doc/japan/2000-debary-sourcesofjapanesetradition\.pdf.*$" "https://libgen.rs/search.php?req=%22Sources+of+Japanese+Tradition%22&open=0&res=25&view=simple&phrase=1&column=def";
+"~^/Tea.page.*$" "/review/tea.page";
+"~^/nooropics$" "/nootropics";
+"~^/mlp-gentics.*$" "/mlp-genetics";
+"~^/hands.*$" "/crop#hands";
+"~^/doc/.*/Copyright$" "/copyright";
+"~^/doc/music/foxtailgrassstudio-cattleya%FF%FF%FF%FF%FF%FF%FF%FF%FF%FF%FF%FF-%FF%FF%FF-04.jpg$" "/doc/music/foxtailgrassstudio-cattleya幻想写景-妖-04.jpg";
+"~^/doc/japan/poetry/teika/%C3%B0$" "/doc/japan/poetry/teika/index";
+"~^/doc/iq/2013-bouchard.pdfT$" "/doc/iq/2013-bouchard.pdf";
+"~^/doc/default.asp$" "/doc/index";
+"~^/doc/darknet-market/2012-04-18-vitacatreviews$" "/doc/darknet-market/silk-road/1/2012-04-18-vitacatreviews.maff";
+"~^/doc/biology/1994-brook.pdf%C2%B5$" "/doc/biology/1994-brook.pdf";
+"~^/doc/iq/2014-Carl$" "https://emilkirkegaard.dk//en/wp-content/uploads/IQ-AND-SOCIOECONOMIC-DEVELOPMENT-ACROSS-REGIONS-OF-THE-UK.pdf"; # DMCA?
+"~^/doc/psychology/writing/1990-paris$" "/doc/psychology/writing/1990-parisreview-irismurdochinterview.html";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
+"~/.*mailto:.*$" "/static/404";
 "~^/.*/\.git/.*$" "/static/404";
 "~^.*/GET$" "/static/404";
 "~^.*/POST$" "/static/404";
@@ -20920,6 +21031,10 @@
 "~^/05.-OMAKE.*$" "/static/404";
 "~^/03-IZNA.*$" "/static/404";
 "~^/aidsalliance.kiev.ua/.*$" "/static/404";
+"~^/invoke/.*$" "/static/404";
+"~^/[a-z]+\.sh$" "/static/404"; # /test.sh, /reminder.sh etc
+"~^/.*88\.xyz.*$" "/static/404";
+"~^/.*/.*/service\.jsp(;|%0a)+.*\.css$" "";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
