--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9969,3 +9969,6 @@ default "";
 "~^/doc/iq/1938-bulher.pdf.*$" "/doc/iq/1938-buhler.pdf";
 "~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-light-f-montage-2.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-light-f-montage.png";
 "~^/doc/ai/nn/diffusion/midjourney/2023-11-08-gwern-gwernnet-essaypopup-catitecture-withanxiousblackcatatwindowsillthumbnail.png.*$" "/doc/cs/css/2023-11-08-gwern-gwernnet-essaypopup-catitecture-withanxiousblackcatatwindowsillthumbnail.png";
+"~^/doc/design/typography/dropcap/2024-01-16-saidahmiz-dropcaps-lightmode-4backgroundandpositionfailurecases.png.*$" "/doc/design/typography/dropcap/2024-01-16-saidachmiz-dropcaps-lightmode-4backgroundandpositionfailurecases.png";
+"~^/doc/psychedelic/2023-meyer.pdf.*$" "/doc/psychedelic/2023-meyer-2.pdf";
+"~^/doc/psychedelic/2023-meyer-2.pdf.*$" "/doc/psychedelic/2023-meyer-3.pdf";
