tag-directories: replace cumbersome #manual-annotation mechanism for inserting essays into tags, and instead gD looks for an essay of the same name in /note/*.page to auto-transclude instead

--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9971,3 +9971,8 @@ default "";
 "~^/doc/design/typography/dropcap/2024-01-16-saidahmiz-dropcaps-lightmode-4backgroundandpositionfailurecases.png.*$" "/doc/design/typography/dropcap/2024-01-16-saidachmiz-dropcaps-lightmode-4backgroundandpositionfailurecases.png";
 "~^/doc/psychedelic/2023-meyer.pdf.*$" "/doc/psychedelic/2023-meyer-2.pdf";
 "~^/doc/psychedelic/2023-meyer-2.pdf.*$" "/doc/psychedelic/2023-meyer-3.pdf";
+"~^/note/musk$" "/note/elon-musk";
+"~^/note/tbi$" "/note/traumatic-brain-injury";
+"~^/note/ramsey$" "/note/frank-ramsey";
+"~^/note/fc$" "/note/fully-connected";
+"~^/note/variance-components$" "/note/variance-component";
