--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -955,6 +955,7 @@ server {
         rewrite ^/(?<original>[L-Nl-n]*[h-q][r-t][s-v].[j-m][A-Ca-f][m-z]).*$ /$original permanent;
         rewrite ^/(?<original>.*).shtml$ /$original.html permanent;
         rewrite ^/(?<original>.*)[\:\;\,]$ /$original permanent;
+        rewrite ^/(?<original>.*)/1000$ /$original permanent;
         rewrite ^/static/font/drop-cap/(?<original>.*)$ /static/font/dropcap/$original permanent;
         rewrite ^/metadata/annotation/(?<base>.*)/\%\2\f(?<original>.*)$ /metadata/annotation/$base/$2F$original permanent;
 
