--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -15270,6 +15270,80 @@
 "~^/doc/biology/1994-brook.pdf%C2%B5$" "/doc/biology/1994-brook.pdf";
 "~^/doc/iq/2014-Carl$" "https://emilkirkegaard.dk//en/wp-content/uploads/IQ-AND-SOCIOECONOMIC-DEVELOPMENT-ACROSS-REGIONS-OF-THE-UK.pdf"; # DMCA?
 "~^/doc/psychology/writing/1990-paris$" "/doc/psychology/writing/1990-parisreview-irismurdochinterview.html";
+"~^/doc/ai/nn/transformer/gpt/lamda/note/lamda$" "/note/lamda";
+"~^/font/dropcap/$" "/static/font/dropcap/";
+"~^/doc/anime/eva/1997-animeland-may-hideakianno-interview-english.page$" "/doc/anime/eva/1997-animeland-may-hideakianno-interview";
+"~^/doc/sociology/eva/2010-crc$" "/doc/anime/eva/2010-crc";
+"~^/doc/iq/1969-snow.htmlThan.*$" "/doc/iq/1969-snow.html";
+"~^/the-melancholy-of-kyon.page$" "/kyon.page";
+"~^/.*/GPT-2-preference-learning$" "/gpt-2-preference-learning";
+"~^/indexEssay.*$" "/index";
+"~^/haskell/Wikipedia$" "/haskell/wikipedia-archive-bot";
+"~^/Figure%E2%80%851.3-from-Brown%E2%80%85et%E2%80%85al%E2%80%852020$" "/doc/ai/nn/transformer/gpt/2020-brown-figure31-gpt3scaling.png";
+"~^/doc/statistics/statistics/bayes/1994-falk$" "/doc/statistics/bayes/1994-falk";
+"~^/doc/statistics/index/1957-feller-anintroductiontoprobabilitytheoryanditsapplications\.pdf.*$" "/doc/statistics/probability/1957-feller-anintroductiontoprobabilitytheoryanditsapplications-1.pdf";
+"~^/doc/statistic...994-benter\.pdf.*$" "/doc/statistics/decision/1994-benter.pdf";
+"~^/doc/science/2014-ma.pdfM.*$" "/doc/science/2014-ma.pdf";
+"~^/doc/rss-subscriptions.opml.html$" "/doc/personal/rss-subscriptions.opml.html";
+"~^/doc/rotten.com/index$" "/doc/rotten.com/library/index.html";
+"~^/doc/psychology/okcupid/raceandattracti$" "/doc/psychology/okcupid/raceandattraction20092014.html";
+"~^/doc/psychology/okcupid/raceandatt$" "/doc/psychology/okcupid/raceandattraction20092014.html";
+"~^/doc/psychology/cognitive-bias/sunk-cost/2015-%C3.*$" "/doc/psychology/cognitive-bias/sunk-cost/2015-danielmead-alwaysastarterneverafinisher.html";
+"~^/doc/psychiatry/bipolar/elon-musk/note/elon-musk$" "/note/elon-musk";
+"~^/doc/philosophy/av9.*$" "/doc/philosophy/index";
+"~^/doc/m0Gg.*$" "/doc/index";
+"~^/doc/.*/Death-Note-script$" "/death-note-script";
+"~^/doc/.*/Candy-Japan$" "/candy-japan";
+"~^/doc/longevity/2019-Delano\.pdf.*$" "/doc/longevity/2019-decabo.pdf";
+"~^/doc/kvT.*$" "/doc/index";
+"~^/doc/.*/The-Erl-King$" "/fiction/the-erl-king";
+"~^/doc/genetics/selection/natural/1979-anderson.pdf\)/$" "/doc/genetics/selection/natural/1979-anderson.pdf";
+"~^/doc/genetics/heritable/1966-heston$" "/doc/genetics/heritable/1966-heston.pdf";
+"~^/doc/economics/1688-delavega-c$" "/doc/economics/1688-delavega-confusionofconfusions.pdf";
+"~^/doc/darknet-market/2020-flugsvamp-docs-fup_b_13010-18.tar.xz$" "/doc/darknet-market/2020-flugsvamp-docs-FUP_B_13010-18.tar.xz";
+"~^/doc/anime/eva/2003-rahxephoncomple$" "/doc/anime/eva/2003-rahxephoncomplete-anno-izubuchi";
+"~^/doc/anime/eva/1997-animeland-may-h$" "/doc/anime/eva/1997-animeland-may-hideakianno-interview.pdf";
+"~^/doc/anime/eva/1996-newtype-anno-ing$" "/doc/anime/eva/1996-newtype-anno-interview";
+"~^/doc/ai/nn/fully-connected/%C3%83.*$" "/doc/ai/nn/fully-connected/index";
+"~^/doc/ai/2023-openai-chatgpt-plugins\.pdf.*$" "/doc/ai/nn/transformer/gpt/index";
+"~^/doc/2011-gwern-yourmorals.org/logicb_process.php_files/$" "/doc/personal/2011-gwern-yourmorals.org/logicb_process.html";
+"~^/doc/1999-bradbury$" "/doc/ai/scaling/hardware/1999-bradbury-matrioshkabrains.pdf";
+"~^/DNM-arrestsbimel.*" "/dnm-arrests";
+"~^/Danbooru2020-SFW-512x512px-version$" "";
+"~^/compress/mathematiciansmi033496mbp$" "https://archive.org/details/mathematiciansmi033496mbp/page/n111";
+"~^/An$" "/abortion-dialogue";
+"~^/ads.page$" "/banner.page";
+"~^/Danbooru2918$" "/danbooru2021#danbooru2018";
+"~^/doc/cs/algorithm/ai/nn/rnn/index$" "/doc/ai/nn/rnn/index";
+"~^/doc/sr/2019-04-22-deepdotweb-dnmlist.htl$" "/doc/darknet-markets/2019-04-22-deepdotweb-dnmlist.html";
+"~^/doc/food/2022goode$" "/doc/food/2022-goodenough.pdf";
+"~^/doc/statistics/2017-verhulst\.pdf.*$" "/doc/genetics/heritable/correlation/2017-verhulst.pdf";
+"~^/doc/genetics/slection/2000-kaback\.pdf.*$" "/doc/genetics/selection/2000-kaback.pdf";
+"~^/doc/iq/2015-st$" "/doc/iq/2007-strenze.pdf";
+"~^/doc/longevity/2020-decabo\.pdf.*$" "/doc/longevity/2019-decabo.pdf";
+"~^/doc/2012-eckerberg\.pdf.*$" "/doc/melatonin/2012-eckerberg.pdf";
+"~^/newsletter/01$" "/doc/newsletter/index";
+"~^/newsletter/13$" "/doc/newsletter/index";
+"~^/newsletter/12$" "/doc/newsletter/index";
+"~^/doc/nootropic/quantified-self/2014-1$" "/doc/nootropic/quantified-self/2014-08-03-lllt-correlation.csv";
+"~^/doc/psychology/2019-01-985$" "/doc/psychology/2019-01-20-gs-socks.csv";
+"~^/doc/psych$" "/doc/psychology/index";
+"~^/doc/rotten.com/library/index/html$" "/doc/rotten.com/library/-index.html";
+"~^/doc/rotten.com/l$" "/doc/rotten.com/library/index.html";
+"~^/Order-statistics/index.html$" "/order-statistics";
+"~^/doc/rottern.com/library/index.html$" "/doc/rotten.com/library/index.html";
+"~^/doc/20140103-20140702-gwern.net-analytics\.pdf.*$" "/doc/traffic/20140103-20140702-gwern.net-analytics.pdf";
+"~^/doc/ai/nn/diffusion/www/pub.towardsai.net/70b9bc28c347614d1677f41d08185a52465de339.html$" "/doc/www/pub.towardsai.net/70b9bc28c347614d1677f41d08185a52465de339.html";
+"~^/doc/philosophy/www/tinlizzie.org/c37d9bbfd3c190d002095454e9896cb7e2c23146\.pdf.*$" "/doc/www/tinlizzie.org/c37d9bbfd3c190d002095454e9896cb7e2c23146.pdf";
+"~^/Embryo-editin$" "/embryo-editing";
+"~^/Clipy$" "/fiction/clippy";
+"~^/test$" "/lorem";
+"~^/testosterone$" "/nootropics#testosterone";
+"~^/gestion/$" "/question";
+"~^/newsletter/static/font/SourceSerifPro-BASIC-RegularItalic.ttf$" "/static/font/ssfp/SourceSerifPro-BASIC-RegularItalic.ttf";
+"~^/doc/psychiatry/.*/favicon.ico$" "/static/img/favicon.ico";
+"~^/caffiene$" "/zeo/caffeine";
+"~^/side$" "/sidenote";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~/.*mailto:.*$" "/static/404";
@@ -21035,6 +21109,71 @@
 "~^/[a-z]+\.sh$" "/static/404"; # /test.sh, /reminder.sh etc
 "~^/.*88\.xyz.*$" "/static/404";
 "~^/.*/.*/service\.jsp(;|%0a)+.*\.css$" "";
+"~^/[a-z]+bet\.com$" "/static/404";
+"~^/[a-z]+bet\.com/.*$" "/static/404";
+"~^/Filemgr/.*$" "/static/404";
+"~^/goanywhere/.*$" "/static/404";
+"~^/Citrix/.*$" "/static/404";
+"~^/start/.*$" "/static/404";
+"~^/sistema/.*$" "/static/404";
+"~^/servico/.*$" "/static/404";
+"~^/recurso/.*$" "/static/404";
+"~^/painel/.*$" "/static/404";
+"~^/mestre/.*$" "/static/404";
+"~^/gerente/.*$" "/static/404";
+"~^/gerenciar/.*$" "/static/404";
+"~^/fundo/.*$" "/static/404";
+"~^/Entrar/.*$" "/static/404";
+"~^/control/.*$" "/static/404";
+"~^/controle/.*$" "/static/404";
+"~^/consola/.*$" "/static/404";
+"~^/consegue/.*$" "/static/404";
+"~^/comecar/.*$" "/static/404";
+"~^/cliente/.*$" "/static/404";
+"~^/mgr/.*$" "/static/404";
+"~^/leviskoi.*$" "/static/404";
+"~^/font/dropcap/.*$" "/static/404";
+"~^//wp-head.*$" "/static/404";
+"~^/static/img/cloud.php.*$" "/static/404";
+"~^/resolve.*$" "/static/404";
+"~^/longbetdo.*$" "/static/404";
+"~^/huayhuntaiwan.*$" "/static/404";
+"~^/huayhunkorea.*$" "/static/404";
+"~^/huayhunegypt.*$" "/static/404";
+"~^/hentaisaturn.*$" "/static/404";
+"~^/footballstartbet.*$" "/static/404";
+"~^/aws-secret.*$" "/static/404";
+"~^/6Ikr.*$" "/static/404";
+"~^/zaya.io.*$" "/static/404";
+"~^//ws..*$" "/static/404";
+"~^//wp-p..*$" "/static/404";
+"~^//wp-consar.*$" "/static/404";
+"~^/worm0.PhP7.*$" "/static/404";
+"~^//.well-known/.*$" "/static/404";
+"~^/vkG5.*$" "/static/404";
+"~^/UEiY.*$" "/static/404";
+"~^/t.me/.*$" "/static/404";
+"~^/this-sites-terms.*$" "/static/404";
+"~^/temz.net.*$" "/static/404";
+"~^/symfony.*$" "/static/404";
+"~^/sunnyten.*$" "/static/404";
+"~^/stocklotto.*" "/static/404";
+"~^/roulette.*$" "/static/404";
+"~^/review/Plus.Google.*$" "/static/404";
+"~^/rentalmshop.*$" "/static/404";
+"~^/remotecontrol.*$" "/static/404";
+"~^/qa/.*$" "/static/404";
+"~^/perpusda.mag.*$" "/static/404";
+"~^/mt-police20.*$" "/static/404";
+"~^/malongbet.*$" "/static/404";
+"~^/joinnutopia.*$" "/static/404";
+"~^/investstock.*$" "/static/404";
+"~^/huay.*$" "/static/404";
+"~^/higherrich.*$" "/static/404";
+"~^/hanoilotto.*$" "/static/404";
+"~^/Gwernbeifen.*$" "/static/404";
+"~^/greatspeeches.*$" "/static/404";
+"~^/google.sm/.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
