--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9976,3 +9976,36 @@ default "";
 "~^/note/ramsey$" "/note/frank-ramsey";
 "~^/note/fc$" "/note/fully-connected";
 "~^/note/variance-components$" "/note/variance-component";
+"~^/doc/cs/cryptography/1998-reeds.pdf.*$" "/doc/cs/cryptography/steganography/1998-reeds.pdf";
+"~^/doc/cs/cryptography/1998-ernst.pdf.*$" "/doc/cs/cryptography/steganography/1998-ernst.pdf";
+"~^/doc/cs/cryptography/1996-ernst.pdf.*$" "/doc/cs/cryptography/steganography/1996-ernst.pdf";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-21-gwern-midjourneyv5-cat-fashionablyswirledcalligraphywithrococoflourishes.png.*$" "/doc/ai/nn/diffusion/midjourney/2023-10-21-gwern-midjourneyv5-cat-fashionablyswirledcalligraphywithrococoflourishes.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-26-gwern-midjourneyv5-dropcat-dark-final.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-26-gwern-midjourneyv5-dropcat-dark-final.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-26-gwern-midjourneyv5-dropcat-light-final.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-26-gwern-midjourneyv5-dropcat-light-final.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-26-gwern-midjourneyv5-dropcat-light-final-2.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-26-gwern-midjourneyv5-dropcat-light-final-2.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-29-gwern-midjourneyv5-ninit-lightmode-curatedsamples-a-circuit.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-29-gwern-midjourneyv5-ninit-lightmode-curatedsamples-a-circuit.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-23-gwern-midjourneyv5-ninit-darkmode-curatedsamples-c-69-classical.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-23-gwern-midjourneyv5-ninit-darkmode-curatedsamples-c-69-classical.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-23-gwern-midjourneyv5-ninit-darkmode-curatedsamples-a-floral.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-23-gwern-midjourneyv5-ninit-darkmode-curatedsamples-a-floral.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-23-gwern-midjourneyv5-ninit-darkmode-curatedsamples-c-25-scifi.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-23-gwern-midjourneyv5-ninit-darkmode-curatedsamples-c-25-scifi.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-29-gwern-midjourneyv5-ninit-lightmode-curatedsamples-a-floral.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-29-gwern-midjourneyv5-ninit-lightmode-curatedsamples-a-floral.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-29-gwern-midjourneyv5-ninit-lightmode-curatedsamples-c-abstract.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-29-gwern-midjourneyv5-ninit-lightmode-curatedsamples-c-abstract.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-dark-f-montage.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-dark-f-montage.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-light-f-montage.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-light-f-montage.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-light-f-montage-2.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-light-f-montage-2.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-dark-t-montage.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-dark-t-montage.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-dark-t-montage-2.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-dark-t-montage-2.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-dark-v-montage-1.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-dark-v-montage-1.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-dark-v-montage-2.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-dark-v-montage-2.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-dark-v-montage-3.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-dark-v-montage-3.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-dark-v-montage-4.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-dark-v-montage-4.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-dark-v-montage-5.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-dark-v-montage-5.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-dark-v-montage-6.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-dark-v-montage-6.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-light-t-montage-1.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-light-t-montage-1.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-light-t-montage-2.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-light-t-montage-2.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-light-t-montage-3.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-light-t-montage-3.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-light-v-montage-1.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-light-v-montage-1.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-light-v-montage-2.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-light-v-montage-2.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-light-v-montage-3.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-light-v-montage-3.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-light-v-montage-4.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-light-v-montage-4.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-light-v-montage-5.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-light-v-montage-5.jpg";
+"~^/doc/cs/2011-08-14-williamyu-mentalrngs.html.*$" "/doc/cs/cryptography/2011-08-14-williamyu-mentalrngs.html";
