--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -15344,6 +15344,7 @@
 "~^/doc/psychiatry/.*/favicon.ico$" "/static/img/favicon.ico";
 "~^/caffiene$" "/zeo/caffeine";
 "~^/side$" "/sidenote";
+"~^/.*/spacer.gif$" "https://www.facebook.com/images/spacer.gif";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~/.*mailto:.*$" "/static/404";
@@ -21174,6 +21175,8 @@
 "~^/Gwernbeifen.*$" "/static/404";
 "~^/greatspeeches.*$" "/static/404";
 "~^/google.sm/.*$" "/static/404";
+"~^/[a-z0-9]+bet[a-z0-9]\.com$" "/static/404";
+"~^/[a-z0-9]+88\.com$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
